section page alignment issue fixes

--- a/static/sass/components/_component.section.scss
+++ b/static/sass/components/_component.section.scss
@@ -27,6 +27,61 @@
                 height: inherit;
             }
         }
+
+        .card-withoutImage {
+            .c-cards-view  {
+                height: inherit;
+            }
+        }
+
+        .section_1_firstVertical {
+            .section-page-genricTabView {
+                @media #{$desktop-up} {
+                    > .row {
+                        div[class^="card"] {
+                            border-top: 1px solid $grey4;
+                            padding-top: 15px;
+                            margin-top: 15px;
+                        }
+                        .col-12 {
+                            &:first-child {
+                                div[class^="card"] {
+                                    border-top: none;
+                                    padding-top: 0;
+                                    margin-top: 0;
+                                }
+                            }
+                        }
+
+                        .card-withoutImage {
+                            .c-cards-view  {                                
+                                &__media {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                @media #{$tablet} {
+                    > .row {
+                        .col-12 {
+                            &:last-child {
+                                display: none;
+                            }
+                            div[class^="card"] {
+                                @include calc(height,'100% - 15px');
+
+                                .card-infoo {
+                                    height: 100%;
+                                }
+                            }
+                        }
+                    }
+                }
+                
+            }
+        }
     }
     &-genricTabView {
         .card-2-tablet {
